noinst_LTLIBRARIES = liblincity.la

liblincity_la_SOURCES =	config.h \
                        engglobs.h \
                        engine.c engine.h \
                        fileutil.c fileutil.h \
                        getopt.c getopt.h \
                        groups.c \
                        interface.h \
                        lc_common.h \
                        lcconfig.h \
                        lcintl.h \
                        lclib.c lclib.h \
                        lc_locale.c lc_locale.h \
                        lcstring.h \
                        lctypes.h \
                        ldsvguts.c ldsvguts.h \
                        lin-city.h \
                        lintypes.c lintypes.h \
                        market.c \
                        power.c power.h \
                        prefix.c prefix.h \
                        shrglobs.c shrglobs.h \
                        shrtypes.c \
                        simulate.c simulate.h \
                        stats.c stats.h \
                        transport.c transport.h \
                        typeinit.h \
                        \
                        organic_farm.c organic_farm.h \
			residence.c residence.h \
			light_industry.c light_industry.h \
			heavy_industry.c heavy_industry.h \
			coalmine.c coalmine.h \
			oremine.c oremine.h \
			commune.c commune.h \
			port.c port.h \
			parkland.c parkland.h \
			university.c university.h \
			recycle.c recycle.h \
			health_centre.c health_centre.h \
			rocket_pad.c rocket_pad.h \
			monument.c monument.h \
			school.c school.h \
			blacksmith.c blacksmith.h \
			mill.c mill.h \
			pottery.c pottery.h \
			firestation.c firestation.h \
			cricket.c cricket.h \
			fire.c fire.h \
			shanty.c shanty.h \
			tip.c tip.h \
			substation.c substation.h \
			windmill.c windmill.h \
			solar_power.c solar_power.h \
			coal_power.c coal_power.h \
			power_line.c power_line.h \
			track.c track.h \
			rail.c rail.h \
			road.c road.h \
			water.c water.h
