noinst_LIBRARIES = libmodules.a

libmodules_a_SOURCES =	organic_farm.c organic_farm.h \
			residence.c residence.h \
			light_industry.c light_industry.h \
			heavy_industry.c heavy_industry.h \
			coalmine.c coalmine.h \
			oremine.c oremine.h \
			commune.c commune.h \
			port.c port.h \
			parkland.c parkland.h \
			university.c university.h \
			recycle.c recycle.h \
			health_centre.c health_centre.h \
			rocket_pad.c rocket_pad.h \
			monument.c monument.h \
			school.c school.h \
			blacksmith.c blacksmith.h \
			mill.c mill.h \
			pottery.c pottery.h \
			firestation.c firestation.h \
			cricket.c cricket.h \
			fire.c fire.c \
			shanty.c shanty.h \
			tip.c tip.h \
			substation.c substation.h \
			windmill.c windmill.h \
			solar_power.c solar_power.h \
			coal_power.c coal_power.h \
			power_line.c power_line.h \
			track.c track.h \
			rail.c rail.h \
			road.c road.h
